Update 04. 재귀와 반복.md

--- a/04. 재귀와 반복.md
+++ b/04. 재귀와 반복.md
@@ -1,8 +1,10 @@
-# 재귀와 반복
+# 재귀와 반복 (Recursion and Interation)
 알고리즘을 논하기에 앞서 마지막으로 살펴볼 개념은 재귀와 반복.      
+* 재귀 : 어떤 대상이나 행위가 스스로를 반복하거나 자기 자신을 참조하는 현상.
+* 반복 : 같은 행위나 과정이 여러 번 반복되는 것.   
    
-### 1. 재귀   
-ex) 뚫뚫이라는 새로운 단어를 들었는데 그 뜻을 모른다고 가정해보자.    
+### 1. 재귀 함수 (Recursion Function)
+ex) 뚫뚫이라는 새로운 단어를 들었는데 그 뜻을 모른다고 가정.    
 사전에서 찾은 단어의 정의가 다음과 같다면 어떻게 해야 할까?   
    
 __'뚫뗅' : '뚫뗅'을 참조하세요.__   
@@ -16,23 +18,80 @@ __'뚫뗅' : '뚫뗅'을 참조하세요.__
 -> 결국 자기 자신을 호출하는 횟수의 한계인 최대 재귀 깊이를 초과해 스택 오버플로 에러가 발생함.   
    
 재귀는 프로그래밍 언어에서 자주 쓰이는 개념이며, 실제로 많은 알고리즘이 재귀적으로 동작함.   
-앞으로 이 책을 읽어나가며 이러한 알고리즘의 몇 가지 예외 마주할 것임.   
+앞으로 이러한 알고리즘의 몇 가지 예외 마주할 것임.   
 
-### 2. 반복
+#### 피보나치 수열 (Fibonacci Sequence)
+각 숫자가 이전 두 숫자의 합으로 이루어진 수열. (ex. 1, 1, 2, 3, 4, 8, 13, 21...)   
+```java
+public static int fibonacci(int n) {
+   if(n<2) {
+      return n;
+   } else {
+      return fibonacci(n-1) + fibonacci(n-2);
+   }
+}
+```
+> n=4일 경우,   
+fibonacci(3)+fibonacci(2) = (fibonacci(2)+fibonacci(1)) + (fibonacci(1)+fibonacci(0)) = {(fibonacci(1)+1)+1} + (1+0) = (1+1) + 1 = 3   
+
+#### 팩토리얼 (Factorial)
+'수를 단계적으로 곱한다'라는 뜻으로 숫자 옆에 !표를 붙어서 표현.   
+ex)
+3! = 3 * 2 * 1 = 6
+4! = 4 * 3 * 2 * 1 = 24
+5! = 5 * 4 * 3 * 2 * 1 = 120
+```java
+public static int factorial(int n) {
+   if(n==0) {
+      return 1;
+   } else {
+      return n * factorial(n-1);
+   }
+} 
+```
+> n=4일 경우,      
+f(4) =   
+4 * f(3)    
+3 * f(2)
+2 * f(1)
+1   
+값 : 24
+
+### 2. 반복문 (Loop)
 반복은 재귀와 혼동해서는 안 되는 또 다른 개념.   
-알고리즘 내부에서의 반복이란 특정 조건이 충족될 때까지 코드 덩어리의 실행이 되풀이되는 것을 뜻함.   
+알고리즘 내부에서의 반복이란 특정 조건이 충족될 때까지 코드 덩어리의 실행이 되풀이되는 것을 뜻함.  
 
-ex) 사용자가 컴퓨터에 비밀번호를 입력하는 장면을 상상해보자.   
+ex) 사용자가 컴퓨터에 비밀번호를 입력할 때,   
 올바른 비밀번호를 입력할 때까지 정해진 횟수만큼 입력을 허용하도록 프로그램을 설계할 수 있음.   
 프로그램에서 사용자에게 비밀번호를 입력할 수 있는 기회를 3회 주고 3회를 초과했을 때 접근을 차단한다면, 이 프로그램의 핵심은 반복적으로 3회 실행되는 함수.   
 
-이 시나리오에서는 비밀번호를 입력받는 코드 덩어리의 실행이 3회 반복됨.   
+> 비밀번호를 입력받는 코드 덩어리의 실행이 3회 반복됨.   
 반복을 빠져나오기 위한 조건은 3회 안에 올바른 비밀번호를 입력하거나 잘못된 비밀번호를 3회 연속 입력하는 것임.   
 
-반복은 알고리즘 실행뿐만 아니라 일반적인 프로그래밍에서도 광범위하게 사용됨.   
-반복에서 유의할 점은 재귀와 마찬가지로 컴퓨터 가용 메모리의 한계 때문에 반복의 종료 조건을 지정하지 않으면 프로그램에 에러가 발생한다는 것임.   
+-> 반복은 알고리즘 실행뿐만 아니라 일반적인 프로그래밍에서도 광범위하게 사용됨.   
+-> 반복에서 유의할 점은 재귀와 마찬가지로 컴퓨터 가용 메모리의 한계 때문에 반복의 종료 조건을 지정하지 않으면 프로그램에 에러가 발생한다는 것임.   
 
-많은 알고리즘이 재귀나 반복을 사용하여 문제를 해결함.   
+### 3. 정리
+#### 재귀함수의 장점
+장점1. 알고리즘 자체가 재귀적으로 표현하기 자연스러울 때 사용하면 가독성이 좋음.   
+장점2. 특정 조건 만족 시 함수를 중단하고 이전 단계로 되돌아 갈 수 있음.
+장점3. 변수 사용을 줄여줌.   
+
+#### 재귀함수의 단점
+단점1. 반복하여 메서드를 호출하여 메모리를 많이 차지하여 성능이 반복문에 비해 느림.   
+단점2. 메서드를 호출하고 종료된 이후에 복귀를 위한 컨텍스트 스위칭 비용이 발생함.   
+단점3. 코드가 실행될 때마다 호출 스택을 생성하고 제거하는 오버헤드가 발생함.   
+단점4. 함수 호출 스택을 사용하므로, 함수 호출의 깊이가 깊어지면 스택 오버플로우가 발생할 수 있음.   
+단점5. 코드의 흐름을 직관적으로 파악하기 어려움.   
+
+#### 반복문의 장점
+장점1. 스택 프레임을 사용하지 않아서 메모리 사용이 효율적이여서 재귀함수에 비해 빠름.   
+장점2. 간단한 변수 조작만으로 상태를 변경하기 때문에 오버헤드가 적음.   
+
+#### 반복문의 단점
+단점1. 트리나 그래프와 같은 복잡한 데이터 구조를 처리할 때 반복문이 복잡해질 수 있으며, 중첩된 반복문이 있을 경우 코드 이해에 어려움이 있을 수 있음.   
+   
+> 많은 알고리즘이 재귀나 반복을 사용하여 문제를 해결함.     
 하지만 가장 적합한 방법을 선택하는 것은 알고리즘을 설계하는 사람의 재량임.   
 
 
